force-app/main/default/objects/ContentVersion/fields/SAC_Bloque__c.field-meta.xml
<CustomField>
    <fullName>SAC_Bloque__c</fullName>
    <description>Campo para clasificar los documentos en distintos bloques</description>
    <label>Bloque</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAC_Entrada</fullName>
                <default>true</default>
                <label>Entrada</label>
            </value>
            <value>
                <fullName>SAC_Tramitacion</fullName>
                <label>Tramitación</label>
            </value>
            <value>
                <fullName>SAC_Respuesta</fullName>
                <label>Respuesta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>