force-app/main/default/objects/ContentVersion/fields/SAC_BloqueoTotalVisibilidad__c.field-meta.xml
<CustomField>
    <fullName>SAC_BloqueoTotalVisibilidad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el fichero debe tener la visibilidad bloqueda para cualquier usuario</description>
    <label>Bloqueo Total Visibilidad</label>
    <type>Checkbox</type>
</CustomField>