force-app/main/default/objects/ContentVersion/fields/SAC_IdEER__c.field-meta.xml
<CustomField>
    <fullName>SAC_IdEER__c</fullName>
    <description>Almacena el ID del documento en el sistema EER en caso de estar subido a este sistema.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Id EER</label>
    <length>50</length>
    <type>Text</type>
</CustomField>