force-app/main/default/objects/ContentVersion/fields/SAC_Oculto__c.field-meta.xml
<CustomField>
    <fullName>SAC_Oculto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oculto</label>
    <type>Checkbox</type>
</CustomField>