force-app/main/default/objects/ContentVersion/fields/SAC_StringRedaccion_fileupload__c.field-meta.xml
<CustomField>
    <fullName>SAC_StringRedaccion_fileupload__c</fullName>
    <description>Campo utlizado para poder identificar aquellos documentos que pertenecen a la resolución de la redaccón en el proyecto SAC</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Redacción</label>
    <length>80</length>
    <type>Text</type>
</CustomField>