force-app/main/default/objects/ContentVersion/fields/SAC_TipoAdjunto__c.field-meta.xml
<CustomField>
    <fullName>SAC_TipoAdjunto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que relaciona cada adjunto con el tipo de documento del que se trata (los tipos de documento se definen en el Maestro Temas)</description>
    <label>Tipo Adjunto</label>
    <referenceTo>SAC_MaestroTemas__c</referenceTo>
    <relationshipLabel>Content Versions</relationshipLabel>
    <relationshipName>Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>