force-app/main/default/objects/ContentVersion/fields/SAC_ValidadoCV__c.field-meta.xml
<CustomField>
    <fullName>SAC_ValidadoCV__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si esta checkeado se le añadirá al título el casenumber y se podrá adjuntar en la etapa 1 y 3 de la redacción</description>
    <label>SAC_ValidadoCV</label>
    <type>Checkbox</type>
</CustomField>