force-app/main/default/objects/ContentVersion/fields/SEG_EnviadoValija__c.field-meta.xml
<CustomField>
    <fullName>SEG_EnviadoValija__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca si el fichero ha sido enviado a Valija</description>
    <inlineHelpText>Marca si el fichero ha sido enviado a Valija</inlineHelpText>
    <label>Fichero enviado a Valija</label>
    <type>Checkbox</type>
</CustomField>