force-app/main/default/objects/ContentVersion/fields/SEG_Firmado__c.field-meta.xml
<CustomField>
    <fullName>SEG_Firmado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Firmado</label>
    <type>Checkbox</type>
</CustomField>