force-app/main/default/objects/ContentVersion/fields/SEG_Tipo__c.field-meta.xml
<CustomField>
    <fullName>SEG_Tipo__c</fullName>
    <description>Tipo de fichero recibido desde Valija</description>
    <inlineHelpText>Tipo de fichero recibido desde Valija</inlineHelpText>
    <label>Tipo fichero valija</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAQUETERIA</fullName>
            </value>
            <value>
                <fullName>JUSTIFICANTES</fullName>
            </value>
            <value>
                <fullName>ENVIADO A VALIJA</fullName>
                <isActive>false</isActive>
                <label>ENVIADO A VALIJA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>