force-app/main/default/objects/ContentVersion/fields/SEG_ValijaId__c.field-meta.xml
<CustomField>
    <fullName>SEG_ValijaId__c</fullName>
    <description>Identificador de Valija para los ficheros que se han recibido de paquetería o proceso de justificantes</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Identificador de Valija para los ficheros que se han recibido de paquetería o proceso de justificantes</inlineHelpText>
    <label>Valija Id (entrada)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>