force-app/main/default/objects/ContentVersion/fields/SEG_ValijaSalienteId__c.field-meta.xml
<CustomField>
    <fullName>SEG_ValijaSalienteId__c</fullName>
    <description>Identificador de Valija para los ficheros que se han enviado en una solicitud saliente para ser procesados</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Identificador de Valija para los ficheros que se han enviado en una solicitud saliente para ser procesados</inlineHelpText>
    <label>Valija Id (saliente)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>